--- a/share.html
+++ b/share.html
@@ -7,8 +7,8 @@
     <!-- Meta tags للمشاركة المحسّنة -->
     <meta property="og:title" content="🚪 باب المنزل للتوصيل">
     <meta property="og:description" content="يرجى التأكد من الباب قبل التسليم - الباب له تصاميم معدنية مميزة">
-    <meta property="og:image" content="https://i.postimg.cc/9FJyHxqT/door-preview.jpg">
-    <meta property="og:image:secure_url" content="https://i.postimg.cc/9FJyHxqT/door-preview.jpg">
+    <meta property="og:image" content="https://i.imgur.com/euSBJIv.jpg">
+    <meta property="og:image:secure_url" content="https://i.imgur.com/euSBJIv.jpg">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="600">
     <meta property="og:image:type" content="image/jpeg">
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="🚪 باب المنزل للتوصيل">
     <meta name="twitter:description" content="يرجى التأكد من الباب قبل التسليم">
-    <meta name="twitter:image" content="https://i.postimg.cc/9FJyHxqT/door-preview.jpg">
+    <meta name="twitter:image" content="https://i.imgur.com/euSBJIv.jpg">
     
     <!-- WhatsApp specific -->
     <meta name="description" content="يرجى التأكد من الباب قبل التسليم - الباب له تصاميم معدنية مميزة">
