--- a/share.html
+++ b/share.html
@@ -7,20 +7,20 @@
     <!-- Meta tags للمشاركة المحسّنة -->
     <meta property="og:title" content="🚪 باب المنزل للتوصيل">
     <meta property="og:description" content="يرجى التأكد من الباب قبل التسليم - الباب له تصاميم معدنية مميزة">
-    <meta property="og:image" content="https://i.imgur.com/euSBJIv.jpg">
-    <meta property="og:image:secure_url" content="https://i.imgur.com/euSBJIv.jpg">
+    <meta property="og:image" content="https://my-door-delivery.netlify.app/door.png">
+    <meta property="og:image:secure_url" content="https://my-door-delivery.netlify.app/door.png">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="600">
-    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://javednoor.github.io/my-door/share.html">
+    <meta property="og:url" content="https://my-door-delivery.netlify.app/share.html">
     <meta property="og:site_name" content="معلومات التوصيل">
     
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="🚪 باب المنزل للتوصيل">
     <meta name="twitter:description" content="يرجى التأكد من الباب قبل التسليم">
-    <meta name="twitter:image" content="https://i.imgur.com/euSBJIv.jpg">
+    <meta name="twitter:image" content="https://my-door-delivery.netlify.app/door.png">
     
     <!-- WhatsApp specific -->
     <meta name="description" content="يرجى التأكد من الباب قبل التسليم - الباب له تصاميم معدنية مميزة">
@@ -106,7 +106,7 @@
     <script>
         // إعادة توجيه تلقائي بعد 3 ثوان
         setTimeout(function() {
-            window.location.href = 'index.html';
+            window.location.href = '/';
         }, 3000);
     </script>
 </head>
