--- a/share.html
+++ b/share.html
@@ -57,7 +57,7 @@
             width: 100%;
             max-width: 500px;
             height: auto;
-            margin: 20px 0 30px 0;
+            margin: 0 0 20px 0;
         }
         
         .description {
