--- a/share.html
+++ b/share.html
@@ -31,19 +31,22 @@
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
-            padding: 20px;
+            padding: 0 20px 20px 20px;
             background: #ffffff;
             min-height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
+            padding-top: 0;
         }
         
         .container {
             text-align: center;
             max-width: 600px;
             width: 100%;
+            margin-top: 0;
+            padding-top: 0;
         }
         
         h1 {
